# CSSE4011

./: .gitignore  README.md
embedded/Core/: clangFormatFiles.sh
embedded/Core/apps/Base/: CMakeLists.txt  prj.conf
embedded/Core/apps/Base/inc/: hid.h  nanopb_serial.h
embedded/Core/apps/Base/src/: bt_handler.c  hid.c  main.c  nanopb_serial.c
embedded/Core/apps/BaseNodeDev/GUI/: main.py  setup_env.sh  (+2 more)
embedded/Core/apps/BaseNodeDev/base/: CMakeLists.txt  prj.conf
embedded/Core/apps/BaseNodeDev/base/src/: bt_handler.c  main.c
embedded/Core/apps/Thingy52/: prj.conf
embedded/MQTT/: paho_mqtt_sub.py
embedded/mycode/: .clang-format  buildThingy.sh  clangFormatFiles.sh
embedded/mycode/apps/Base/: CMakeLists.txt  setup_env.sh
embedded/mycode/apps/Base/src/: main.c  minecraftmessage.proto
embedded/mycode/apps/Thingy52/: CMakeLists.txt
embedded/mycode/include/: nanopb_serial.h
embedded/mycode/mylib/: hid.c
embedded/ultrasonic/: README.md
embedded/ultrasonic/test/: main.py  pahomqttsub.py
embedded/ultrasonic/ultrasonic_x/: ultrasonic_x.ino
embedded/ultrasonic/ultrasonic_y/: ultrasonic_y.ino
milestone_docs/: kpis.md  sensor_integration.md
milestone_docs/blockdiagram/: system-overview-block-diagram.drawio
milestone_docs/flowcharts/: flowcharts.md
milestone_docs/protocoldiagram/: message-protocol-diagram.drawio
pc/: gesture_detection.py  gui.py  ml_gesture.py  test_gesture_ml.ipynb
pc/BH/: gesture_detection.py  gui.py  ml_gesture.py  serial_send.py
pc/LY/: main.py  minecraftmessage.proto  serial_reader.py
submission_docs/: Poster.pptx
(+17 files in other folders)
